<resources>
    <string name="app_name">KAT CWS</string>
    <string name="app_full_name">Karnataka Appellate Tribunal\n Case Watch System</string>
    <string name="citzen">Citizen</string>
    <string name="advocate">Advocate</string>
    <string name="ca">CA/STP</string>
    <string name="companies">Companies</string>
    <string name="society">Societies</string>

    <string name="advocate_entroll">Enrollment Number</string>
    <string name="ca_icai">ICAI Number</string>
    <string name="companies_name">Company Name</string>
    <string name="companies_number">TIN Number</string>
    <string name="socities_name">Society Name</string>
    <string name="socities_number">Registration Number</string>

    <string name="invalid_otp">Please Enter Proper OTP </string>

    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="confirm_email">Confirm Email ID</string>
    <string name="address">Address</string>
    <string name="village_city_town">Village/City/Town</string>
    <string name="state">State</string>
    <string name="pincode">PinCode</string>
    <string name="division">Division</string>
    <string name="district">District</string>
    <string name="taluk">Taluk</string>
    <string name="retry">Retry</string>
    <string name="sub_division">Sub Division</string>
    <string name="submit">SUBMIT</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_head1">Basic Information</string>
    <string name="sign_up_head2">Communication Information</string>
    <string name="sign_up_head3">Address Information</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>

    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="forgotpswd">Forgot Password ?</string>
    <string name="otp_code">OTP Code</string>
    <string name="forgotpswdmsg">Enter your registered User ID \n OTP will be sent to registered mobile number.</string>
    <string name="otp_msg">OTP sent to registered mobile no</string>
    <string name="update_head">Update is Available</string>
    <string name="update_below">An Update for the application is \n Available</string>

    <string name="dilog_message">Check Your Connectivity</string>
    <string name="title_activity_login_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_status">Enter OTP</string>
    <string name="internet">Please Check Your Internet Connectivity</string>
    <string name="phone">8022353885</string>
    <string name="email">info.kapt@karnataka.gov.in</string>
    <string name="fax">2225 1389</string>

    <string name="term_condition">- This Mobile Application is maintained and content provided by Karnataka Appellate Tribunal.Though all efforts have been made to ensure the accuracy and currency of the content on this Application, the same should not be construed as a statement of law or used for any legal purposes.
\nIn case of any ambiguity or doubts, users are advised to verify / check with the Department(s) and / or other source(s), and to obtain appropriate professional advice.

\n\n- Under no circumstances will this Department be liable for any expense, loss or damage including, without limitation, indirect or consequential loss or damage, or any expense, loss or damage whatsoever arising from use, or loss of use, of data, arising out of or in connection with the use of this Application.
\nThese terms and conditions shall be governed by and construed in accordance with the Indian Laws.

\n\n- Any dispute arising under these terms and conditions shall be subject to the jurisdiction of the courts of India. The information posted on this Application could include hypertext links or pointers to information created and maintained by non-Government / private organizations.

\n\n- Copyright Office is providing these links and pointers solely for your information and convenience. When you select a link to an outside Application, you are leaving the Copyright Office website and are subject to the privacy and security policies of the owners/sponsors of the outside Application. Copyright Office, does not guarantee the availability of such linked pages at all times.

\n\n- Copyright Office cannot authorize the use of copyrighted materials contained in linked Application. Users are advised to request such authorization from the owner of the linked Application. Copyright Office, does not guarantee that linked Application comply with Indian Government Web Guidelines.</string>
    <string name="no_record">No Record Found</string>

</resources>
