<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:scaleType="fitXY" />

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="15dp"-->
            <!--android:alpha="0.45"-->
            <!--android:background="@color/white"-->
            <!--android:elevation="5dp"-->
            <!--app:cardCornerRadius="2dp">-->

        <!--</android.support.v7.widget.CardView>-->
    <!--</RelativeLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:transitionName="logo"
                android:src="@drawable/app_logoo" />

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/app_full_name"
                android:textColor="@color/gray" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:background="@drawable/hammer">

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/et_uName_lay"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:theme="@style/TextLabelLogin"
                   android:alpha="0.5"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:layout_marginLeft="30dp"
                   android:layout_marginRight="30dp">

                   <EditText
                       android:id="@+id/et_uName"
                       android:imeOptions="flagNoExtractUi"
                       android:padding="10dp"
                       android:background="@color/gray"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_gravity="bottom"
                       android:hint="@string/user_name"
                       android:textColorHint="@color/white"
                       android:textColor="@color/white"
                       android:maxLength="8"
                       android:inputType="textPersonName"
                       android:textSize="15sp" />
               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/et_pswd_lay"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:theme="@style/TextLabelLogin"
                   android:alpha="0.5"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:layout_marginLeft="30dp"
                   android:layout_marginRight="30dp">

                   <EditText
                       android:id="@+id/et_pswd"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_gravity="bottom"
                       android:padding="10dp"
                       android:textColorHint="@color/white"
                       android:textColor="@color/white"
                       android:background="@color/gray"
                       android:hint="@string/password"
                       android:imeOptions="flagNoExtractUi"
                       android:inputType="textPassword"
                       android:textSize="15sp" />
               </android.support.design.widget.TextInputLayout>

               <TextView
                   android:id="@+id/tv_forgot"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="right"
                   android:layout_margin="2dp"
                   android:padding="10dp"
                   android:text="@string/forgotpswd"
                   android:textColor="@color/white"/>

           </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/transparent" />
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_on_click"
                android:text="@string/login"
                android:layout_weight="0.4"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBtnText" />
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/transparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1.6"
                    android:visibility="visible"
                    android:background="@color/transparent" />
                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_white_on_click"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:visibility="visible"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1.6"
                    android:background="@color/transparent" />

                <Button
                    android:id="@+id/btn_guest"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_white_on_click"
                    android:text="@string/guest"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1.6"
                    android:background="@color/transparent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
