<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <LinearLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue_light"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:transitionName="logo"
            android:src="@drawable/app_logoo" />
        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:text="KAT - Registration"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/tool"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:alpha="0.45"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="2dp">

        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="35dp"
        android:layout_below="@+id/tool"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_head"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_on_click"
                android:text="Citizen"
                android:textSize="17sp"
                android:textColor="@color/colorBtnText"
                android:textStyle="bold"
                />

            <include
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/signup_profile" />

            <TextView
                android:id="@+id/txt_head1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sign_up_head1"
                android:textColor="@color/colorTextTitle"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/spinnertitle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                />



            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_fName_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_fName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_lName_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_lName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_uName_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_uName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:maxLength="8"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_password_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/txt_head2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sign_up_head2"
                android:textColor="@color/colorTextTitle"
                android:textSize="17sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_email_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_email"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@_0123456789."
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:textSize="15sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_mobile_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_head3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sign_up_head3"
                android:textColor="@color/colorTextTitle"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_pincode_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_addr_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_addr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="textPostalAddress"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_village_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_village"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_reg_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_on_click"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>